--- a/MyProject/template/home.html
+++ b/MyProject/template/home.html
@@ -57,16 +57,39 @@
             </div>
         </div>
 
-     <span>Blogs</span>
-     <div id="brand">
-        <div id="brand-items">
-            <div class="brands"><img src="/static/img/apple.jpg" alt=""></div>
-            <div class="brands"><img src="/static/img/tomato.jpg" alt=""></div>
-            <div class="brands"><img src="/static/img/apple.jpg" alt=""></div>
-            <div class="brands"><img src="/static/img/tomato.jpg" alt=""></div>
-          
-        </div>
-     </div>
+        <div>
+            <span>About Us</span>
+            <div class="row">
+                <!-- Person1 -->
+                <div class="col-md">
+                    <img class="thumbnail" src="static/aboutus/Asmita Timalsina.jpg" alt="Apple">
+                    <div class="box-element product">
+                        <h6><strong>Ashmita Timalsina</strong></h6>
+                        <hr>
+                        <p style="color: green;">Developer | Data Scientist</p>
+                    </div>
+                </div>
+        
+                <!-- P2 -->
+                <div class="col-md">
+                    <img class="thumbnail" src="static/aboutus/anjal.jpg" alt="Tomato">
+                    <div class="box-element product">
+                        <h6><strong>Anjal Ghimire</strong></h6>
+                        <hr>
+                        <p style="color: green;">Python | Data Scientist</p>
+                    </div>
+                </div>
+        
+                <!-- P3 -->
+                <div class="col-md">
+                    <img class="thumbnail" src="/static/img/corn.jpg" alt="Corn">
+                    <div class="box-element product">
+                        <h6><strong>Ruth Ghising</strong></h6>
+                        <hr>
+                        <p style="color: green;">Python Backend Developer</p>
+                    </div>
+                </div>
      <br>
+  
  
 {% endblock %}
