making website resposive

--- a/MyProject/template/login.html
+++ b/MyProject/template/login.html
@@ -13,12 +13,9 @@
 <body>
     
     <div class="main_register">
-        
-        <html>
-            <link rel="stylesheet" href="/static/css/style.css">
-            <body>
-            <br><br><br><br>
+        <span>Please Login.</span>
                 <div id="log-in">
+                    
                 <form id="signin" action="#" method="post" >
                     <h4 style="color:red;" >{{error}}</h4>
                     {% csrf_token %}
