--- a/MyProject/template/home.html
+++ b/MyProject/template/home.html
@@ -79,17 +79,40 @@
                 </div>
             </div>
         </div>
-
-     <span>Blogs</span>
-     <div id="brand">
-        <div id="brand-items">
-            <div class="brands"><img src="/static/img/apple.jpg" alt=""></div>
-            <div class="brands"><img src="/static/img/tomato.jpg" alt=""></div>
-            <div class="brands"><img src="/static/img/apple.jpg" alt=""></div>
-            <div class="brands"><img src="/static/img/tomato.jpg" alt=""></div>
-          
-        </div>
-     </div>
-     <br>
+        <div>
+            <span>About Us </span>
+            <div class="row">
+                <!-- Person q 1 -->
+                <div class="col-md">
+                    <img class="person" src="/static/aboutus/asmita timalsina.jpg" alt="Apple">
+                    <div class="box-element p-intro">
+                        <h6><strong>Ashmita Timalsina</strong></h6>
+                        <hr>
+                       <p>Student at Academia Int'l College | Data Science Enthusiasts</p>
+                    </div>
+                </div>
+        
+                <!-- Product 2 -->
+                <div class="col-md">
+                    <img class="person" src="/static/aboutus/anjal.jpg" alt="Tomato">
+                    <div class="box-element p-intro">
+                        <h6><strong>Anjal Ghimire</strong></h6>
+                        <hr>
+                        <p>Student at Academia Int'l College | Data Science Enthusiasts</p>
+                    </div>
+                </div>
+        
+                <!-- Product 3 -->
+                <div class="col-md">
+                    <img class="person" src="/static/aboutus/ruth.jpg" alt="Corn">
+                    <div class="box-element p-intro">
+                        <h6><strong>Ruth Ghising</strong></h6>
+                        <hr>
+                        <p>Student at Academia Int'l College | Python Developer</p>
+                    </div>
+                </div>
+            </div>
+    
+   
  
 {% endblock %}
