--- a/MyProject/template/signup.html
+++ b/MyProject/template/signup.html
@@ -29,7 +29,7 @@
                                 Password <br><input class="input" type="password" name="password1" value=""required><br>
                                 Confirm Password <br><input class="input" type="password" name="password2" value=""required><br><br>
                                 <input class="button" type="submit" value="Sign Up">
-                                <p class="signup-link">Already have an account? <a href="signup.html">Login here</a></p>
+                                <p class="signup-link">Already have an account? <a href="login.html">Login here</a></p>
                             </div>
                            <div>
                             {% if messages %}
