--- a/MyProject/template/test.html
+++ b/MyProject/template/test.html
@@ -81,7 +81,7 @@
                 <label for="fileInput" class="custom-button">
                     <input type="file" name="image" id="fileInput" required>
                 </label>
-                <button type="submit" class="custom-button">Predict</button>
+                <button type="submit" class="custom-button">Detect</button>
             </form>
         </div>
 
