--- a/MyProject/template/about.html
+++ b/MyProject/template/about.html
@@ -3,26 +3,13 @@
 
 <div id="about">
     <h4>About</h4>
-<p>Plants are important for living organisms as they help in balancing the habitat’s biological 
-    aspects. According to the 2021/22 census 66% of the Nepal’s population relies on agriculture. 
-    Like human, plants also suffer from many diseases that badly affect their normal growth. 
-    Identifying plant diseases is important in order to prevent the loses within the yield. Plant 
-    pathologists does the classification and identification of diseases, often on leaves depending 
-    on various factors such as shapes, sizes, color, or texture. 
-    Because of huge number of plants and complexity, there are also many numbers of diseases. 
-    Its terribly problematic to observe the plant diseases manually. It requires a huge amount of 
-    labor, expertise within the plant diseases and collectively requires excessive time interval. For 
-    the easy and effective detection of plant diseases image processing and machine learning 
-    models can be used. 
-    In this project, we will be implementing the concept of image processing and machine learning 
-    for the detection of plant diseases with the help of their leaves pictures and will be 
-    recommending treatments and preventive measures. We will be using Image processing for 
-    feature extraction and other useful information. The main aim of using machine learning is to 
-    understand the training data and fit that training data into models that should be useful to the 
-    people.</p>
+<p>The Plant Disease Detection System website is an advanced platform designed to help users identify plant diseases by uploading images. The system combines the power of Convolutional Neural Networks (CNNs) for feature extraction and the Random Forest algorithm for classification, ensuring precise and reliable disease detection. Users can upload an image of a diseased plant, and the system processes it by utilizing CNNs to extract critical features such as texture, color, and patterns that are indicative of specific plant diseases. These extracted features are then fed into the Random Forest model, which uses its ensemble of decision trees to classify the disease accurately.Once the disease is identified, the website provides comprehensive information about it,  causes, preventive measures, and treatment suggestions. 
+ <br><br>
+    The integration of CNNs for feature extraction ensures that the system captures even the most subtle visual characteristics of plant diseases, while the Random Forest classifier enhances prediction accuracy by aggregating multiple decision paths. The website is user-friendly, responsive, and accessible, making it a valuable tool for farmers, gardeners, and agricultural professionals. By providing timely and accurate disease detection, the platform supports sustainable farming practices and contributes to improved crop health and yield.</p>
 
 </div>
 <br>
 <br>
 <br>
+<br><br><br><br>
 {% endblock %}
