--- a/MyProject/template/landing-header.html
+++ b/MyProject/template/landing-header.html
@@ -11,6 +11,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <title>home</title>
     
@@ -19,13 +20,26 @@
     
     <nav id="navbar">
         <div id="logo"><a href="#">Plant Disease Detection System</a></div>
+     
         <button class="toggle-btn" onclick="toggleMenu()">☰</button>
         <ul id="menu">
             <li class="items"><a href='{% url "home" %}'>Home</a></li>
             <li class="items"><a href="{% url 'about' %}">About</a></li>
+            {% if request.COOKIES.auth_token %}
+             {% if  user.role == "admin" %}
+                <li class="items"><a href="{% url 'admin' %}">Admin Panel</a></li>
+            {% else %}
+                <li class="items"><a href="{% url 'user_profile' %}"><i class="fas fa-user-circle"></i></a></li>
+            {% endif %}
+            <li class="items"><a href="{% url 'logout' %}">Logout</a></li>
+    
+     {% else %}
             <li class="items"><a href="{% url 'login' %}">Login</a></li>
             <li class="items"><a href="{% url 'signup' %}">Signup</a></li>
-            <li class="items"><a href="{% url 'logout' %}">Logout</a></li>
+    {% endif %}
+            
+            
+           
         </ul>
     </nav>
     
